--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,77 @@
-*{
+/* CSS Reset */
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+/* Main Style */
+
+html,
+body {
+    font-family: "Roboto", sans-serif;
+    line-height: 1.7em;
+}
+
 a {
+    color: #333;
     text-decoration: none;
+}
+
+h1,
+h2,
+h3 {
+    padding-bottom: 20px;
+}
+
+p {
+    padding: 10px 0;
+}
+
+/* Utility Class */
+
+.container {
+    margin: auto;
+    max-width: 1100PX;
+    overflow: auto;
+    padding: 0 20PX;
+    
+}
+
+/* Navbar */
+
+#navbar {
+    background: #333;
+    color: #fff;
+    overflow: auto;
+}
+
+#navbar a {
+    color: #fff;
+}
+
+#navbar h1 {
+    float: left;
+    padding: 20px;
+}
+
+#navbar ul {
     list-style: none;
+    float: right;
 }
 
-body{
-    font-family: 'Roboto', sans-serif;
+#navbar ul li {
+    float: left;
 }
 
-.logo{
+#navbar ul li a{
     display: block;
-    width: auto;
+    padding: 20px;
+    text-align: center;
 }
 
-.main-nav{
-    display: block;
-    margin: 0 0 15rem 0;
+#navbar ul li a:hover,
+#navbar ul li a.current{
+    background: #444;
+    color: #f7c08a;
 }
