added home info

--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,26 @@ p {
     color: #333;
 }
 
+.btn-light{
+    background: #f4f4f4;
+    color: #333;
+}
+
+.bg-dark{
+    background: #333;
+    color: #fff;
+}
+
+.bg-primary{
+    background: #333;
+    color: #f7c08a;
+}
+
+.bg-light{
+    background: #f4f4f4;
+    color: #333;
+}
+
 /* Navbar */
 
 #navbar {
@@ -123,3 +143,28 @@ p {
 
 }
 
+/* Home Info */
+
+#home-info{
+    height: 400px;
+}
+
+.info-img{
+    float: left;
+    width: 50%;
+    background: url('../img/photo-1.jpg') no-repeat;
+    min-height: 100%;
+}
+
+.info-content{
+    float: right;
+    width: 50%;
+    height: 100%;
+    text-align: center;
+    padding: 50px 30px;
+    overflow: hidden;
+}
+
+.info-content p{
+    padding-bottom: 30px;
+}
