--- a/css/style.css
+++ b/css/style.css
@@ -72,8 +72,8 @@ p {
 }
 
 .bg-primary{
-    background: #333;
-    color: #f7c08a;
+    background: #f7c08a;
+    color: #333;
 }
 
 .bg-light{
@@ -167,4 +167,17 @@ p {
 
 .info-content p{
     padding-bottom: 30px;
+}
+
+/* Features */
+
+.box{
+    float: left;
+    width: 33.3%;
+    padding: 50px;
+    text-align: center;
+}
+
+.box i{
+    margin-bottom: 10px;
 }
