--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,10 @@ p {
     color: #333;
 }
 
+
+.clr{
+    clear: both;
+}
 /* Navbar */
 
 #navbar {
@@ -180,4 +184,13 @@ p {
 
 .box i{
     margin-bottom: 10px;
+}
+
+/* Footer */
+
+#main-footer{
+    text-align: center;
+    background: #444;
+    color: #fff;
+    padding: 10px;
 }
