--- a/css/style.css
+++ b/css/style.css
@@ -32,21 +32,20 @@ p {
 
 .container {
     margin: auto;
-    max-width: 1100PX;
+    max-width: 1100px;
     overflow: auto;
-    padding: 0 20PX;
-    
+    padding: 0 20px;
 }
 
-.text-primary{
+.text-primary {
     color: #f7c08a;
 }
 
-.lead{
+.lead {
     font-size: 20px;
 }
 
-.btn{
+.btn {
     display: inline-block;
     font-size: 18px;
     color: #fff;
@@ -56,35 +55,51 @@ p {
     cursor: pointer;
 }
 
-.btn:hover{
+.btn:hover {
     background: #f7c08a;
     color: #333;
 }
 
-.btn-light{
+.btn-light {
     background: #f4f4f4;
     color: #333;
 }
 
-.bg-dark{
+.bg-dark {
     background: #333;
     color: #fff;
 }
 
-.bg-primary{
+.bg-primary {
     background: #f7c08a;
     color: #333;
 }
 
-.bg-light{
+.bg-light {
     background: #f4f4f4;
     color: #333;
 }
 
-
-.clr{
+.clr {
     clear: both;
 }
+
+.lg-heading{
+    font-size: 40px;
+}
+
+/* Padding */
+
+.py-1 {
+    padding: 10px 0;
+}
+.py-2 {
+    padding: 20px 0;
+}
+.py-3 {
+    padding: 30px 0;
+}
+
 /* Navbar */
 
 #navbar {
@@ -111,56 +126,55 @@ p {
     float: left;
 }
 
-#navbar ul li a{
+#navbar ul li a {
     display: block;
     padding: 20px;
     text-align: center;
 }
 
 #navbar ul li a:hover,
-#navbar ul li a.current{
+#navbar ul li a.current {
     background: #444;
     color: #f7c08a;
 }
 
 /* Showcase */
 
-#showcase{
-    background: url('../img/showcase.jpg') no-repeat center center/cover;
+#showcase {
+    background: url("../img/showcase.jpg") no-repeat center center/cover;
     height: 600px;
 }
 
-.showcase-content{
+.showcase-content {
     color: #fff;
     text-align: center;
     padding-top: 170px;
 }
 
-.showcase-content h1{
+.showcase-content h1 {
     font-size: 60px;
     line-height: 1.2em;
 }
 
-.showcase-content p{
+.showcase-content p {
     padding-bottom: 20px;
     line-height: 1.7em;
-
 }
 
 /* Home Info */
 
-#home-info{
+#home-info {
     height: 400px;
 }
 
-.info-img{
+.info-img {
     float: left;
     width: 50%;
-    background: url('../img/photo-1.jpg') no-repeat;
+    background: url("../img/photo-1.jpg") no-repeat;
     min-height: 100%;
 }
 
-.info-content{
+.info-content {
     float: right;
     width: 50%;
     height: 100%;
@@ -169,26 +183,47 @@ p {
     overflow: hidden;
 }
 
-.info-content p{
+.info-content p {
     padding-bottom: 30px;
 }
 
 /* Features */
 
-.box{
+.box {
     float: left;
     width: 33.3%;
     padding: 50px;
     text-align: center;
 }
 
-.box i{
+.box i {
     margin-bottom: 10px;
+}
+
+/* About Info */
+
+.info-left {
+    float: left;
+    width: 50%;
+    min-height: 100%;
+}
+
+.info-right {
+    float: right;
+    width: 50%;
+    min-height: 100%;
+}
+
+.info-right img {
+    display: block;
+    margin: auto;
+    width: 70%;
+    border-radius: 50%;
 }
 
 /* Footer */
 
-#main-footer{
+#main-footer {
     text-align: center;
     background: #444;
     color: #fff;
