--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,7 @@ p {
 /* About Info */
 
 .info-left {
+    padding-top: 2px;
     float: left;
     width: 50%;
     min-height: 100%;
@@ -218,8 +219,41 @@ p {
     display: block;
     margin: auto;
     width: 70%;
+    border-radius: 10%;
+}
+
+/* Testimonials */
+
+#testimonials{
+    height: 600px;
+    background: url('../img/test-bg.jpg') no-repeat center center/cover;
+    padding-top: 100px;
+}
+
+#testimonials h2{
+    color: #fff;
+    padding-top: 2px;
+    padding-bottom: 40px;
+    text-align: center;
+}
+
+.testimonial{
+    padding: 20px;
+    margin-bottom: 40px;
+    border-radius: 5px;
+    opacity: 0.9;
+}
+
+
+.testimonial img{
+    float: left;
+    width: 100px;
+    margin-top: 15px;
+    margin-right: 20px;
     border-radius: 50%;
 }
+
+
 
 /* Footer */
 
