--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ p {
     clear: both;
 }
 
-.lg-heading{
+.lg-heading {
     font-size: 40px;
 }
 
@@ -224,28 +224,27 @@ p {
 
 /* Testimonials */
 
-#testimonials{
+#testimonials {
     height: 600px;
-    background: url('../img/test-bg.jpg') no-repeat center center/cover;
+    background: url("../img/test-bg.jpg") no-repeat center center/cover;
     padding-top: 100px;
 }
 
-#testimonials h2{
+#testimonials h2 {
     color: #fff;
     padding-top: 2px;
     padding-bottom: 40px;
     text-align: center;
 }
 
-.testimonial{
+.testimonial {
     padding: 20px;
     margin-bottom: 40px;
     border-radius: 5px;
     opacity: 0.9;
 }
 
-
-.testimonial img{
+.testimonial img {
     float: left;
     width: 100px;
     margin-top: 15px;
@@ -253,34 +252,34 @@ p {
     border-radius: 50%;
 }
 
-
 /* Contact form */
 
-.form-group{
+.form-group {
     margin-bottom: 20px;
 }
 
-#contact-form label{
+#contact-form label {
     display: block;
     margin-bottom: 5px;
 }
 
 #contact-form input,
-#contact-form textarea{
+#contact-form textarea {
     width: 100%;
     padding: 10px;
     border: 1px solid #ddd;
 }
 
-#contact-form textarea{
+#contact-form textarea {
     height: 200px;
 }
 
 #contact-form input:focus,
-#contact-form textarea:focus{
+#contact-form textarea:focus {
     outline: none;
     border-color: #f7c08a;
 }
+
 /* Footer */
 
 #main-footer {
